# gold-savings-review

./: .gitignore  README.md  app.js  index.html  package.json  start.command  styles.css
desktop-tauri/: package-lock.json  package.json
desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop-tauri/src-tauri/capabilities/: default.json
desktop-tauri/src-tauri/icons/: tray-template.ppm
desktop-tauri/src-tauri/src/: main.rs  tray.rs  watch.rs
desktop-tauri/ui/: app.js  index.html  styles.css
docs/: README.md  design-doc.md  learning-plan.md  trade-screenshot-ocr-design.md
python/: paddle_ocr_service.py
scripts/: local-server-runtime.mjs  start-in-iterm.applescript  start-iterm.applescript  start-local.mjs  status-local.mjs  stop-local.mjs
src/: batch-record-watch-tools.mjs  detail-tools.mjs  history-transfer-tools.mjs  live-price-tools.mjs  ocr-core.js  portfolio-metrics.mjs  review-metrics.mjs
tests/: app-shell.test.mjs  batch-record-watch-tools.test.mjs  detail-tools.test.mjs  history-transfer-tools.test.mjs  live-price-tools.test.mjs  market-view-model.test.mjs  ocr-core.test.mjs  portfolio-metrics.test.mjs  review-metrics.test.mjs  test_paddle_ocr_service.py
tests/fixtures/: cmb-history-ocr-boxes.json
web/: README.md  app-shell.js  app.js  charts.js  config.js  details.js  elements.js  events.js  index.html  runtime-session.js  state.js  styles.css  workspace.js
web/app-shell/: index.js  market.js  persistence.js  status.js  workspace.js
web/capture/: images.js  ocr.js
web/details/: editing.js  entries.js  index.js  rendering.js  (+1 more)
(+24 files in other folders)
