[package]
name = "gold-savings-review-watch-panel"
version = "0.1.0"
description = "积存金复盘台菜单栏收益看板"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["image-png", "tray-icon"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
